2010-04-18  Per Bothner  <per@bothner.com>

	* PreProcess.java: The use:com.sun.net.httpserver option is now
	passed in by the top-level Makefile.

	* AbstractHashTable.java: Fix comment to it is PreProcess-safe.

2010-04-10  Per Bothner  <per@bothner.com>

	* PreProcess.java: Add support for "java6compat5" version.
	Add JAVA6COMPAT5 pre-processor macro.

2010-04-08  Per Bothner  <per@bothner.com>

	* GeneralHashTable.java (getNode): Fix parameter inconsistency
	introduced by recent changes to add java.util.Map-compatibility.
	Fixes bug reported by Yaroslav Kavenchuk <kavenchuk@jenty.by>.

2010-04-05  Per Bothner  <per@bothner.com>

	* AbstractWeakHashTable.java (put): Restore (and update) custom
	implementation that was incorrectly removed by previous change.

2010-04-04  Per Bothner  <per@bothner.com>

	Change AbstractHashTable to implement java.util.Map.
	* AbstractHashTable.java: Change to extend java.util.AbstractMap.
	(getEntryKey, getEntryValue, setEntryValue): Remove - just use
	the correspondong Map.Entry methods.
	(hash, matches, get, getNode, remove): Change type of key parameter
	to be Object rather than K, to be compatible with java.util.Map.
	(class AbstractEntrySet): New helper class, for entrySet method/
	* HashNode.java: Change to extend AbstractMap.SimpleEntry, if JAVA6.
	In that case, #ifndef out stuff that is now inherited.
	Add 2-argument constructor.
	* GeneralHashTable.java: Update accordingly.
	* IdentityHashTable.java: Likewise.
	* WeakIdentityHashMap.java: Likewise.
	* WeakHashNode.java: Now implements Map.Entry.
	* AbstractWeakHashTable.java: Somewhat more major changes.
	(class WEntry): Use this in place of WeakHashNode, since WeakHashNode
	was being used in a way that made it incompatible with Map.Entry.

2010-04-02  Per Bothner  <per@bothner.com>

	* PreProcess.java (filter): Factor out pre-processing from writing
	into new method, to allow some flexiobility is uses.

	* PreProcess.java (NO_JAVA4_FEATURES): Add "-JAVA5".
